
v2-005 (6/12/2024): GUI Update
- Finished re-writing enough to make the pre-game chat work again. Still need to add ServerManager class functionality.
- chatLog renamed to preGameLog.
- Fixed a bug regarding the RNG class requiring a seed instead of having None as a default.

v2-X (10/12/2024): GUI Update
- Added functionality to allow the host of the server (the first person that joins) to be able to start the game which will open the GUI interface and stop the pregame chat.
- Added a boot animation when the given command is 'reboot'

---MAJOR RELEASE---

v2 (10/12/2024): GUI Update
First real update, now there's a GUI to actually play the game with the existing parts becoming the pre-game lobby chat.
Please see the above BETA release notes for more details.

Added:
- A GUI for mariOS, the primary interface for the game.

Changed:
- Major refactoring for the Networking side of the game.
- Chat room has become the pre-game lobby.

Removed:
- Some plans have been scrapped.

---BETA---

v3-001 (26/01/2025): Terminal + File System Update
After a "quick" break I've started development beck up again.

- Added Caesar Cipher Class (untested)
- Added Skeletion for ZigZag Cipher Class
- Minor changes to plans
- Added help command functionality

v3-002 (29/01/2025): Terminal + File System Update
- Added ZigZag Cipher, Product Cipher, and Hash Classes
- Added currently empty IP, username, and password fields to the mariOS instance

v3-003 (02/02/2025): Terminal + File System Update
- Added more set-up for match IPs
- Added log-in to mariOS 
- Added account set-up when rebooting for the first time

v3-004 (04/02/2025): Terminal + File System Update
- Updated help command output
- Started to add mariOS's File System
- Added the ability to cycle through recently used commands using the Up and Down arrow keys
- Added functionality for 'exit' command to first power off the VM, then close the game window