@@ -17,10 +17,15 @@ def manage_server(skt: socket.socket, mngr: ServerManager):
             m = GameMsg()
             m.recv(str(c.recv(64), encoding="utf-8"))
             name = m.getcmd()
+            name = mngr.add_player(name)
             file = open("Game_Files/preGameLog", "a")
             file.write(f"{name} joined the Room.\n")
             file.close()
-            mngr.add_player(name)
+            c.setblocking(True)
+            m = GameMsg()
+            m.prepare("SERVER", msgType.RESPONSE, name + "|" + mngr._IPs[name])
+            c.send(bytes(m.send().encode("utf-8")))
+            c.setblocking(False)
         except ConnectionError as e:
             file = open("Game_Files/preGameLog", "a")
             file.write(f"{name} left the Room.\n")
