@@ -25,7 +25,8 @@ v3 - Terminal + File System Update
 [O] Add functionality to easily access recently used commands
 
 v4 - Internet Update
-[X] Add IP and inter-computer interaction
+[O] Add IP
+[X] Add inter-computer interaction
 
 v5 - Chatting Update
 [X] Add the Chatroom app
